# kd-gat-paper

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  DOI_BACKFILL.md  Makefile  README.md  TMLR_CONVERSION.md  index.md  myst.candidacy.yml  myst.yml  pyproject.toml  references.bib  styles.yml
.claude/: entrypoints.txt
.playwright-mcp/: page-2026-04-03T04-07-05-561Z.yml  page-2026-04-03T04-13-02-210Z.yml
_static/: custom.css
appendix/: architecture.md
brainstorm/: tikz-alternatives.md
candidacy/: appendix-combined.md  appendix.md  background.md  current-framework.md  index.md  introduction.md  proposed-research.md
content/: ablation.md  background.md  conclusion.md  experiments.md  explainability.md  introduction.md  methodology.md  related-work.md  results.md
data/: SCHEMAS.md  pull_data.py  schemas.json  schemas.yaml  styles.yaml  validate.py
diagrams/: COMPONENTS.md  TODO.md  architecture.yaml  gat-layer.yaml  gat.yaml  graph-base.yaml  graph-gat.yaml  kd-gat.yaml  kd-vgae.yaml  vgae.yaml
docs/: Architecture-Diagrams.md  Candidacy-Build.md  Data-Pipeline.md  Deployment-and-CI.md  Development-Setup.md  Diagram-Authoring-Guide.md  Figure-Authoring.md  Home.md  TMLR-Export.md  Table-Authoring.md  figure-spec.md  figures-wishlist.md  fragility-audit.md  hf-data-inventory.md  research-directions.md
figures/: architecture.positions.json
interactive/: .env.example  DATA_CONTRACT.md  DATA_CONTRACTS.md  README.md  build.js  package-lock.json  package.json  tsconfig.json  vite.config.js  vitest.config.ts
paper/: STYLE.md
references/: background.bib  (+11 more)
(+273 files in other folders)
