[project]
name = "kd-gat-paper"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "bibtexparser",
    "huggingface-hub>=1.12.0",
    "pandas",
    "polars",
    "pyyaml",
    "scipy",
    "tabulate",
]

[project.optional-dependencies]
test = [
    "pytest>=8",
]
notebooks = [
    "altair>=5",
    "vl-convert-python",
    "scikit-image",
    "jupyter",
    "shapely>=2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
